--- a/docs/final_report/sections/appendices.tex
+++ b/docs/final_report/sections/appendices.tex
@@ -30,3 +30,7 @@
 \lstinputlisting[style=MatlabStyle]{../../src/rhythmic_inside/config.m}
 
 \subsection{Appendix B: References}
+
+404 -\_- \\
+
+TODO: Add references (mark hills, octave documentation, etc.)
