--- a/docs/final_report/sections/conclusion.tex
+++ b/docs/final_report/sections/conclusion.tex
@@ -1,18 +1,14 @@
 \section{Conclusion}
 
-This project represents a significant step forward in the realm of digital signal processing, particularly in the automated detection of beats within music tracks. Through the development of a sophisticated beat detection algorithm, this work has demonstrated the potential to accurately estimate the beats per minute (BPM) of a wide variety of musical genres.
-
-\subsection{Achievements}
-
-The core achievements of this project include the successful design and implementation of a signal processing pipeline that preprocesses audio files, extracts relevant features, and applies auto-correlation and peak detection techniques to estimate BPM. The algorithm's performance was rigorously tested against a comprehensive dataset, showing a high degree of accuracy when compared to established tools in the field. Furthermore, the development of a robust testing framework has enabled continuous validation and refinement of the algorithm, ensuring its reliability and effectiveness.
+The project's core achievements include the successful design and implementation of a signal processing pipeline. This pipeline preprocesses audio files, extracts relevant features, and applies auto-correlation and peak detection techniques to estimate BPM. The algorithm's performance was rigorously tested against a comprehensive dataset, demonstrating a high degree of accuracy when compared to established tools in the field. Furthermore, a robust testing framework has been developed to enable continuous validation and refinement of the algorithm, ensuring its reliability and effectiveness.
 
 \subsection{Challenges Faced}
 
-Throughout the project, several challenges were encountered and overcome. These included the handling of diverse musical structures and tempos, which required a versatile approach to signal processing and the customization of filtering techniques. Additionally, optimizing the algorithm for computational efficiency while maintaining high accuracy posed a significant challenge, necessitating a careful balance between complexity and performance.
+During the project, we faced and overcame several challenges. The task involved handling diverse musical structures and tempos, which required adjusting parameters and customizing filtering techniques. Additionally, we optimized the algorithm for computational efficiency while maintaining high accuracy, which posed a significant challenge. We had to carefully balance complexity and performance.
 
 \subsection{Future Work}
 
-Looking ahead, there are several avenues for potential future work to further enhance the beat detection system. These include:
+Looking ahead, there are several potential avenues for future work to enhance the beat detection system. These may include:
 
 \begin{itemize}
     \item \textbf{Machine Learning Integration:} Incorporating machine learning techniques to improve the algorithm's adaptability and accuracy across a broader range of musical styles and recording qualities.
@@ -23,4 +19,4 @@ Looking ahead, there are several avenues for potential future work to further en
 
 \subsection{Closing Remarks}
 
-In conclusion, this project has laid a solid foundation for advanced beat detection technologies, offering promising results and identifying clear paths for future enhancements. By addressing the challenges faced and exploring the potential avenues for improvement, there is a significant opportunity to push the boundaries of what is currently possible in beat detection and music analysis.
+In conclusion, this project has provided us with valuable insights into the field of beat detection. We faced several challenges that significantly contributed to our understanding of the subject, including technical difficulties such as signal processing and algorithmic accuracy assessments. This endeavor has broadened our academic and practical knowledge in audio signal analysis. Although we were unable to conduct a comprehensive comparison against an extensive BPM database due to time constraints, we continue to work on establishing a framework for such analysis in the future. We are grateful for the guidance we have received, which has been crucial in our pursuit of a nuanced understanding of beat detection algorithms.
