--- a/docs/final_report/sections/introduction.tex
+++ b/docs/final_report/sections/introduction.tex
@@ -1,24 +1,24 @@
 \section{Introduction}
 
-Beat detection, a cornerstone of digital signal processing in music analysis, plays a pivotal role in a myriad of applications ranging from music production and DJing to fitness and dance. The ability to accurately identify the tempo or beats per minute (BPM) of music not only enhances the creation and enjoyment of music but also supports various technological innovations in entertainment, health, and education.
+Beat detection is a fundamental aspect of digital signal processing in music analysis, playing a crucial role in a wide range of applications, including music production, DJing, fitness, and dance. Accurately identifying the tempo or beats per minute (BPM) of music not only enhances the creation and enjoyment of music but also supports various technological innovations in entertainment, health, and education.
 
 \subsection{Problem Statement}
 
-Despite its significance, beat detection remains a challenging problem due to the complexity and diversity of musical compositions. Variations in genre, tempo, and instrumentation, as well as recording quality, present considerable obstacles to developing a universal, accurate, and efficient beat detection system. Traditional methods often require manual intervention or are limited in their applicability across different musical styles. Thus, there is a pressing need for an automated solution that can robustly handle a wide range of music with high accuracy.
+Although beat detection is significant, it remains a challenging problem due to the complexity and diversity of musical compositions. Variations in genre, tempo, instrumentation, and recording quality present considerable obstacles to developing a universal, accurate, and efficient beat detection system. Traditional methods often require manual intervention or are limited in their applicability across different musical styles. Therefore, an automated solution that can handle a wide range of music with high accuracy is urgently needed.
 
 \subsection{Significance of Beat Detection}
 
-Beat detection is fundamental to numerous applications, influencing how we interact with music and sound. In music production and DJing, it facilitates beat matching and mixing, enhancing the listener's experience. In fitness, accurate tempo detection can synchronize music with workout intensities, improving exercise engagement and effectiveness. Furthermore, in the realm of interactive gaming and dance, beat detection enables real-time music interaction, providing a more immersive and enjoyable experience for users.
+Beat detection is crucial for various applications, affecting how we interact with music and sound. It plays a significant role in music production and DJing, enabling beat matching and mixing, which enhances the listener's experience. In fitness, precise tempo detection can synchronize music with workout intensities, improving exercise engagement and effectiveness. Furthermore, in the realm of interactive gaming and dance, beat detection allows for real-time music interaction, providing a more immersive and enjoyable experience for users.
 
 \subsection{Project Objectives and Scope}
 
-This project aims to address the challenges inherent in beat detection by developing a sophisticated algorithm capable of accurately and efficiently determining the BPM of any given music track. The objectives include:
+This project aims to tackle the challenges of beat detection by creating an advanced algorithm that can precisely and effectively determine the BPM of any music track. The objectives comprise:
 \begin{itemize}
-    \item Designing and implementing a signal processing pipeline to analyze audio files, focusing on filtering, energy signal calculation, auto-correlation, and peak detection.
-    \item Evaluating the algorithm's performance through rigorous testing against established benchmarks and a wide variety of music genres.
-    \item Developing a user-friendly testing framework to facilitate continuous improvement and validation of the algorithm.
+    \item Designing and implementing a signal processing pipeline to analyze audio files. The pipeline will focus on filtering, energy signal calculation, auto-correlation, and peak detection.
+    \item The algorithm's performance was evaluated through rigorous testing against established benchmarks and a wide variety of music genres.
+    \item Developing a testing framework that is user-friendly to facilitate continuous improvement and validation of the algorithm.
 \end{itemize}
 
-The scope of this project encompasses the entire process of beat detection, from initial audio file preprocessing to the final BPM estimation, including the development of a comprehensive testing suite to ensure the algorithm's accuracy and reliability across different musical contexts. \\
+This project encompasses the entire process of beat detection, from initial audio file preprocessing to the final BPM estimation. A comprehensive testing suite has been developed to ensure the algorithm's accuracy and reliability across different musical contexts. \\
 
-In summary, this project seeks to advance the field of beat detection by offering an innovative solution that leverages signal processing techniques and testing methodologies to achieve high accuracy and efficiency. Through this work, we aim to contribute to the broader understanding and application of beat detection in various music-related domains.
+In summary, this project aims to advance the field of beat detection by providing an innovative solution that utilizes signal processing techniques and testing methodologies to achieve high accuracy and efficiency. The goal of this work is to contribute to the broader understanding and application of beat detection in various music-related domains.
